--- a/HT2.ipynb
+++ b/HT2.ipynb
@@ -35,18 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'simpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32md:\\Program Files (x86)\\GitHub\\HT2-Modelacion\\HT2.ipynb Celda 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Program%20Files%20%28x86%29/GitHub/HT2-Modelacion/HT2.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msimpy\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Program%20Files%20%28x86%29/GitHub/HT2-Modelacion/HT2.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Program%20Files%20%28x86%29/GitHub/HT2-Modelacion/HT2.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Parámetros\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'simpy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo promedio de un cliente en la cola: 0.05 minutos\n",
+      "Número de clientes en la cola en promedio: 0.01\n",
+      "Grado o factor de utilización de cada cajero: 0.15\n"
      ]
     }
    ],
