--- a/HT2.ipynb
+++ b/HT2.ipynb
@@ -97,6 +97,62 @@
     "print(f\"Grado o factor de utilización de cada cajero: {utilization:.2f}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Proceso de Poisson:\n",
+    "El proceso de Poisson es una forma de modelar eventos que ocurren de manera aleatoria a lo largo del tiempo, donde la probabilidad de que ocurra más de un evento en un intervalo de tiempo infinitesimalmente pequeño es prácticamente cero. En esta simulación, la llegada de clientes al supermercado sigue un proceso de Poisson. Esto significa que en cualquier momento, un cliente podría llegar, pero la probabilidad de que dos o más clientes lleguen al mismo instante es extremadamente baja.\n",
+    "\n",
+    "En términos prácticos, usamos la distribución exponencial (que está relacionada con el proceso de Poisson) para determinar el tiempo entre llegadas sucesivas. Si se dice que hay λ clientes que llegan por hora en promedio (la tasa del proceso de Poisson), el tiempo entre las llegadas sigue una distribución exponencial con un parámetro λ.\n",
+    "\n",
+    "En el código, esto se refleja en la línea:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**yield env.timeout(random.expovariate(rate))**\n",
+    "\n",
+    "Donde rate es λ y random.expovariate(rate) genera tiempos aleatorios entre llegadas basados en la distribución exponencial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Distribución Exponencial:\n",
+    "Además de modelar el tiempo entre llegadas, la distribución exponencial se usa para modelar el tiempo de servicio del cajero. Esto se basa en la suposición de que el tiempo que un cajero tarda en atender a un cliente es variable y sigue esta distribución.\n",
+    "\n",
+    "Esto es modelado en el código con la línea:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**service_time = random.expovariate(LAMBDA)**\n",
+    "Esto significa que el tiempo que toma servir a un cliente es una variable aleatoria con una distribución exponencial, nuevamente con el parámetro λ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sistema de Cola:\n",
+    "El comportamiento de la cola (los clientes esperando ser atendidos) es el núcleo de esta simulación. En esta simulación, cuando un cliente llega, él o ella selecciona la caja con la fila más corta. Si hay múltiples cajas con la misma longitud de fila más corta, el cliente elige aleatoriamente una de esas cajas. Esto es modelado por:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**min(servers, key=lambda s: len(s.queue))**\n",
+    "\n",
+    "Donde servers es la lista de cajas y se selecciona la caja con la fila más corta."
+   ]
   }
  ],
  "metadata": {
